--- a/Shooter.uproject
+++ b/Shooter.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.27",
+	"EngineAssociation": "{74ECE1C9-4F4C-B19E-2E8E-35BCE0382286}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
