made the projectile move in different directions and they raycast is...
longer

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultServerGameMode=/Script/Engine.GameModeBase
-GameDefaultMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap.FirstPersonExampleMap
+GlobalDefaultGameMode=/Game/GameModes/MyGameMode.MyGameMode_C
+GlobalDefaultServerGameMode=/Game/GameModes/MyGameMode.MyGameMode_C
 EditorStartupMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap.FirstPersonExampleMap
+GameDefaultMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap.FirstPersonExampleMap
+TransitionMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap.FirstPersonExampleMap
+ServerDefaultMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap.FirstPersonExampleMap
 
